2009-02-08  Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/search/search-replace.c,
	plugins/search/search-replace_backend.c:
	Fix #564942 – display project-relative path in search results pane
	Fix #565015 – duplicate matches in search results pane

	* plugins/message-view/message-view.c:
	Fix #539580 – Uncorrect pass search result to

2009-02-08  Sébastien Granjoux  <seb.sfo@free.fr>

	* www/htdocs/downloads.php:
	Fix #570614 – outdated download addresses

2009-02-08  Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/scintilla/text_editor.c,
	plugins/sourceview/sourceview.c,
	libanjuta/interfaces/libanjuta.idl:
	ianjuta_editor_get_length returns value in bytes instead of characters

	* plugins/search/search-replace.c,
	plugins/search/search-replace_backend.c,
	plugins/search/search-replace_backend.h:
	Fix #566531 – Find & Replace results in wrong result for files
	containing multi-byte UTF-8 sequences

	* plugins/search/Makefile.am:
	Define log domains for search plugin

2009-02-08  Carl-Anton Ingmarsson  <ca.ingmarsson@gmail.com>

	reviewed by: Massimo Cora'  <mcora@svn.gnome.org>

	* plugins/symbol-db/plugin.c (on_session_save), (on_session_load),
	(on_project_root_added):
	* plugins/symbol-db/symbol-db-system.c (sdb_system_do_engine_scan):
	fixed #570877 – symbol-db doesn't scan user-added packages.

2009-02-08  Yang Hong  <hongyang@redflag-linux.com>

	* plugins/git/plugin.c (git_activate_plugin):
	Fixed #570929, initialize widgets before add watches.

2009-02-07  Massimo Cora'  <mcora@svn.gnome.org>

	* plugins/symbol-db/plugin.c (isymbol_manager_search_project):
	* plugins/symbol-db/symbol-db-engine-queries.c
	(symbol_db_engine_find_symbol_by_name_pattern_filtered):
	ianjuta_symbol_manager_search_project () will now search only for global
	project symbols.

2009-02-06  Massimo Cora'  <mcora@svn.gnome.org>

	* plugins/symbol-db/plugin.c (isymbol_manager_search_project):
	* plugins/symbol-db/symbol-db-engine-queries.c